--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap-trial": "^3.12.7",
     "lucide-react": "^0.479.0",
     "next": "15.1.7",
     "react": "^19.0.0",
